# Book_Lab

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/: application.py  config.py  main.py
src/core/: error_handler.py  heavy_processor.py  mode_manager.py  rate_limiter.py  task_manager.py  timer.py
src/data_processing/: engine.py  fabrics.py  parser.py  source.py
src/data_processing/json_files/: demo1.json  demo2.json  demo3.json  good.json  proba.json
src/domain/: constants.py  models.py  work_unit.py
src/telegram/: bot.py  states.py  useful.py
src/telegram/handlers/: commands.py  parsing.py
src/telegram/inlineboards/: genres.py
src/telegram/keyboards/: menu.py
